--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="../p5/p5.min.js"></script>
-    <script src="../p5/addons/p5.dom.min.js"></script>
-    <script src="../p5/addons/p5.sound.min.js"></script>
-    <script src="sketch.js"></script>
+    <script src="../p5/p5.js" type="text/javascript"></script>
+    <script src="../p5/addons/p5.dom.js" type="text/javascript"></script>
+    <script language="javascript" type="text/javascript" src="../p5/addons/p5.sound.js"></script>
+
+    <script src="sketch.js" type="text/javascript"></script>
     <style> body {padding: 0; margin: 5; } 
     </style>
   </head>
