--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,11 @@
     <script language="javascript" type="text/javascript" src="../p5/addons/p5.sound.js"></script>
 
     <script src="sketch.js" type="text/javascript"></script>
-    <style> body {padding: 0; margin: 5; } 
+    <style> body {padding: 0; margin: 5; }
     </style>
   </head>
   <body> 
+    <p id = "head">Tomato Gif creds to: <a href="https://dribbble.com/shots/3861432-Can-you-ketchup" > Takashi Wickles</a></p>
 
 
   </body>
